# PDF4QT

./: .gitignore  .licensee.yml  AppxManifest.xml.in  CMakeLists.txt  Dockerfile  LICENSE  NOTES.txt  Pdf4Qt.pri  Pdf4Qt.pro  Pdf4Qt.qbs  PdfForQt.pro  README.md  README.txt  RELEASES.txt  Release_Process.txt  conanfile.txt  config.h.cmake  explic.rtf  generated_code_definition.xml  make-package.sh.in  qt.conf  vcpkg-configuration.json  vcpkg.json  vcpkg_with_qt.json  version.txt.in
CodeGenerator/: CMakeLists.txt  CodeGenerator.pro  CodeGenerator.qbs  codegenerator.cpp  codegenerator.h  generatormainwindow.cpp  generatormainwindow.h  generatormainwindow.ui  main.cpp
Pdf4QtDiff/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  differencesdockwidget.cpp  differencesdockwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settings.h  settingsdockwidget.cpp  settingsdockwidget.h  utils.cpp  utils.h
Pdf4QtDocDiff/: CMakeLists.txt  Pdf4QtDocDiff.pro  Pdf4QtDocDiff.qbs  aboutdialog.cpp  aboutdialog.h  app.qrc  differencesdockwidget.cpp  differencesdockwidget.h  differencesdockwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settings.h  settingsdockwidget.cpp  settingsdockwidget.h  settingsdockwidget.ui  utils.cpp  utils.h
Pdf4QtDocPageOrganizer/: CMakeLists.txt  Pdf4QtDocPageOrganizer.pro  Pdf4QtDocPageOrganizer.qbs  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  assembleoutputsettingsdialog.cpp  assembleoutputsettingsdialog.h  assembleoutputsettingsdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pageitemdelegate.cpp  pageitemdelegate.h  pageitemmodel.cpp  pageitemmodel.h  resources.qrc  selectbookmarkstoregroupdialog.cpp  selectbookmarkstoregroupdialog.h  selectbookmarkstoregroupdialog.ui  selectoutlinetoregroupdialog.cpp  selectoutlinetoregroupdialog.h  selectoutlinetoregroupdialog.ui
Pdf4QtEditor/: CMakeLists.txt  CMakeLists.txt.bak  main.cpp
Pdf4QtLaunchPad/: CMakeLists.txt  app.qrc  icon.rc  launchapplication.cpp  launchapplication.h  launchapplicationwidget.cpp  launchapplicationwidget.h  launchapplicationwidget.ui  launchdialog.cpp  launchdialog.h  launchdialog.ui  main.cpp
Pdf4QtLib/: CMakeLists.txt  Pdf4QtLib.pro  Pdf4QtLib.qbs
Pdf4QtLibCore/: CMakeLists.txt
Pdf4QtLibGui/: CMakeLists.txt  CMakeLists.txt.bak  main.cpp  pdf4qtlibgui.qrc  pdfaboutdialog.cpp  pdfaboutdialog.h  pdfaboutdialog.ui  pdfactioncombobox.cpp  pdfactioncombobox.h  pdfadvancedfindwidget.cpp  pdfadvancedfindwidget.h  pdfadvancedfindwidget.ui  pdfbookmarkmanager.cpp  pdfbookmarkmanager.h  pdfbookmarkui.cpp  pdfbookmarkui.h  pdfcreatebitonaldocumentdialog.cpp  pdfcreatebitonaldocumentdialog.h  pdfcreatebitonaldocumentdialog.ui  pdfdocumentpropertiesdialog.cpp  pdfdocumentpropertiesdialog.h  pdfdocumentpropertiesdialog.ui  pdfeditormainwindow.cpp  pdfeditormainwindow.h  pdfeditormainwindow.ui  pdfencryptionsettingsdialog.cpp  pdfencryptionsettingsdialog.h  pdfencryptionstrengthhintwidget.cpp  pdfencryptionstrengthhintwidget.h  pdffullscreenwidget.cpp  pdffullscreenwidget.h  pdfoptimizedocumentdialog.cpp  pdfoptimizedocumentdialog.h  pdfoptimizeimagesdialog.cpp  pdfoptimizeimagesdialog.h  pdfoptimizeimagesdialog.ui  pdfprogramcontroller.cpp  pdfprogramcontroller.h  pdfrecentfilemanager.cpp  pdfrecentfilemanager.h  (+25 more)
Pdf4QtLibWidgets/: CMakeLists.txt
Pdf4QtPageMaster/: CMakeLists.txt  CMakeLists.txt.bak  aboutdialog.cpp  aboutdialog.h  assembleoutputsettingsdialog.cpp  assembleoutputsettingsdialog.h  assembleoutputsettingsdialog.ui  croppagesdialog.cpp  croppagesdialog.h  croppagesdialog.ui  imageoptimizationsettingsdialog.cpp  imageoptimizationsettingsdialog.h  itempropertiesdialog.cpp  itempropertiesdialog.h  itempropertiesdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pageitemdelegate.cpp  pageitemdelegate.h  pageitemmodel.cpp  pageitemmodel.h  pageitempreviewrenderer.cpp  pageitempreviewrenderer.h  pdfpageimportdialog.cpp  pdfpageimportdialog.h  pdfpageimportdialog.ui  resources.qrc  selectoutlinetoregroupdialog.cpp  selectoutlinetoregroupdialog.h
Pdf4QtViewer/: CMakeLists.txt  Pdf4QtViewer.pro  Pdf4QtViewer.qbs  main.cpp  pdf3dsceneprocessor.cpp  pdf3dsceneprocessor.h  pdf4qtviewer.qrc  pdfaboutdialog.cpp  pdfaboutdialog.h  pdfaboutdialog.ui  pdfactioncombobox.cpp  pdfactioncombobox.h  pdfadvancedfindwidget.cpp  pdfadvancedfindwidget.h  pdfbookmarkmanager.cpp  pdfbookmarkmanager.h  pdfbookmarkui.cpp  pdfbookmarkui.h  pdfcreatebitonaldocumentdialog.cpp  pdfcreatebitonaldocumentdialog.h  pdfcreatebitonaldocumentdialog.ui  pdfdocumentpropertiesdialog.cpp  pdfdocumentpropertiesdialog.h  pdfdocumentpropertiesdialog.ui  pdfencryptionsettingsdialog.cpp  pdfencryptionsettingsdialog.h  pdfencryptionsettingsdialog.ui  pdfencryptionstrengthhintwidget.cpp  pdfencryptionstrengthhintwidget.h  pdfmediaviewerdialog.cpp  pdfmediaviewerdialog.h  pdfmediaviewerdialog.ui  pdfoptimizedocumentdialog.cpp  pdfoptimizedocumentdialog.h  pdfoptimizedocumentdialog.ui  pdfprogramcontroller.cpp  pdfprogramcontroller.h  pdfrecentfilemanager.cpp  pdfrecentfilemanager.h  pdfrendertoimagesdialog.cpp  (+26 more)
Pdf4QtViewerPlugins/: CMakeLists.txt  Pdf4QtViewerPlugins.pro
PdfExampleGenerator/: CMakeLists.txt  PdfExampleGenerator.pro  PdfExampleGenerator.qbs  main.cpp  pdfexamplesgenerator.cpp  pdfexamplesgenerator.h
PdfTool/: CMakeLists.txt  PdfTool.pro  PdfTool.qbs  main.cpp  pdfoutputformatter.cpp  pdfoutputformatter.h  pdftoolabstractapplication.cpp  pdftoolabstractapplication.h  pdftoolattachments.cpp  pdftoolattachments.h  pdftoolaudiobook.cpp  pdftoolaudiobook.h  pdftoolcertstore.cpp  pdftoolcertstore.h  pdftoolcolorprofiles.cpp  pdftoolcolorprofiles.h  pdftooldecrypt.cpp  pdftooldecrypt.h  pdftooldiff.cpp  pdftooldiff.h  pdftoolencrypt.cpp  pdftoolencrypt.h  pdftoolfetchimages.cpp  pdftoolfetchimages.h  pdftoolfetchtext.cpp  pdftoolfetchtext.h  pdftoolinfo.cpp  pdftoolinfo.h  pdftoolinfofonts.cpp  pdftoolinfofonts.h  pdftoolinfoinks.cpp  pdftoolinfoinks.h  pdftoolinfojavascript.cpp  pdftoolinfojavascript.h  (+28 more)
(+804 files in other folders)
